--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   hooks_riverpod: ^2.4.6
+  circle_nav_bar: ^2.0.1+1
+  lottie: ^2.7.0
 
 dev_dependencies:
   flutter_test:
